# siemens_to_ismrmrd

./: .gitignore  .gitmodules  CMakeLists.txt  ConverterXml.h  Dockerfile  GadgetXml.h  LICENSE  README.mkd  XNode.cpp  XNode.h  XNodeParser.cpp  b64-main.cpp  base64.cpp  base64.h  base64_decode.cpp  base64_decode.h  base64_encode.cpp  converter_version.in  copy_converter_file_and_dependencies  create_converter_tar.sh  defaults.cpp  embed.cpp  main.cpp  siemens_IceGadgetron.cpp  siemensraw.cpp  siemensraw.h  tinyxml.h  tinyxmlerror.cpp  vds.cpp  windows_installation.ps1
.github/workflows/: build.yml  dependency-check.yml  siemens_to_ismrmrd_conda.yml
cmake/: cpack_options.cmake.in  siemens_to_ismrmrd_cpack.cmake
conda/: build.sh  environment.yml  meta.yaml  package.sh  run_test.sh
dependencies/: ismrmrd
parameter_maps/: IsmrmrdParameterMap.xml  IsmrmrdParameterMap.xsl  IsmrmrdParameterMap_Siemens.xml  IsmrmrdParameterMap_Siemens.xsl  IsmrmrdParameterMap_Siemens_B0REF.xsl  IsmrmrdParameterMap_Siemens_EPI.xsl  IsmrmrdParameterMap_Siemens_EPI_FLASHREF.xsl  IsmrmrdParameterMap_Siemens_NX.xsl  IsmrmrdParameterMap_Siemens_NX40.xsl  IsmrmrdParameterMap_Siemens_PreZeros.xsl  IsmrmrdParameterMap_Siemens_T1Mapping_SASHA.xsl  IsmrmrdParameterMap_Siemens_VB17.xml  RadialParameterMap.xml
schema/: IceGadgetron.xml  IceGadgetron.xsd
siemens_mriclient/: CMakeLists.txt  IceGadgetronConfig.h  XNode.cpp  XNode.h  XNodeParser.cpp  defaults.cpp  main.cpp  siemens_IceGadgetron.cpp  siemens_hdf5_datatypes.h  siemens_ismrmrd_client.cpp  siemens_sedona_client.cpp  siemens_to_HDF5.cpp  siemensraw.cpp  siemensraw.h
siemens_mriclient/parameter_maps/: GadgetronParameterMap.xml  IsmrmrdParameterMap.xml  IsmrmrdParameterMap.xsl  IsmrmrdParameterMap_Siemens.xml  IsmrmrdParameterMap_Siemens.xsl  IsmrmrdParameterMap_Siemens_EPI.xml  IsmrmrdParameterMap_Siemens_EPI.xsl  IsmrmrdParameterMap_Siemens_EPI_FLASHREF.xsl  IsmrmrdParameterMap_Siemens_VB17.xml  SedonaParameterMap.xml  SedonaParameterMap.xsl  SpiralParameterMap.xml  SpiralParameterMap_MSH.xml
siemens_mriclient/schema/: IceGadgetron.xsd
